# PostgreSQL

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: TB_ETUDIANT.csv  TB_MATIERE.csv  TB_NOTE.csv  TB_TYPE_EVALUATION.csv  TB_TYPE_MATIERE.csv
scripts/: load_data.py
sql/: schema.sql
